Fix filter alignment with sidebar open.

--- a/asset/css/scripto.css
+++ b/asset/css/scripto.css
@@ -21,6 +21,10 @@
     width: auto;
 }
 
+.browse .browse-controls {
+    justify-content: flex-end;
+}
+
 .scripto.browse th.comment {
     width: 40%;
 }
